# flusurver-cli

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
src/: __init__.py  main.py
tests/: __init__.py  test_main.py
tests/data/: output.tsv  response.html  sequence.fa
tests/data/results/: clade_call.tsv  drug_sensitivity.tsv  mutation_report.txt  query_summary.csv
