[metadata]
name = fluserver-cli
version = 0.1.0
author = Joon Klaps
author_email = joon.klaps@kuleuven.be
description = CLI tool for processing flu sequences and GISAID data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Joon-Klaps/fluserver-gisaid
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    click>=8.0.0
    requests>=2.25.0

[options.packages.find]
where = src

[options.extras_require]
test =
    responses>=0.13.0
    pytest>=6.0.0

[options.entry_points]
console_scripts =
    fluserver = src.main:cli
