[metadata]
name = flusurver-cli
version = 0.1.0
author = Joon Klaps
author_email = joon.klaps@kuleuven.be
description = CLI tool for processing flu sequences and GISAID data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Joon-Klaps/flusurver-gisaid
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    flusurver = src
packages = flusurver
python_requires = >=3.6
install_requires =
    click>=8.0.0
    requests>=2.25.0
    beautifulsoup4>=4.9.3

[options.packages.find]
where = src

[options.extras_require]
test =
    responses>=0.23.1
    pytest>=6.0.0
    pytest-responses>=0.5.1

[options.entry_points]
console_scripts =
    flusurver = flusurver.main:cli
