[metadata]
name = flusurver-cli
version = 0.1.0
author = Joon Klaps
author_email = joon.klaps@kuleuven.be
description = CLI tool for processing flu sequences and GISAID data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Joon-Klaps/flusurver-gisaid
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    flusurver = src
packages = flusurver
python_requires = >=3.6
install_requires =
    rich-click>=1.8.5
    requests>=2.25.0
    beautifulsoup4>=4.9.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    flusurver = flusurver.main:cli
